QA Project/Force/force-app/main/default/objects/Invoice_Line_Item__c/Invoice_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Invoice Line Item</label>
    <nameField>
        <label>Invoice Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Line Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>