QA Project/Force/force-app/main/default/objects/Invoice_Line_Item__c/fields/Data_of_expense__c.field-meta.xml
<CustomField>
    <fullName>Data_of_expense__c</fullName>
    <label>Data of expense</label>
    <type>Date</type>
</CustomField>