QA Project/Force/force-app/main/default/objects/Invoice_Line_Item__c/fields/Mileage_allowance__c.field-meta.xml
<CustomField>
    <fullName>Mileage_allowance__c</fullName>
    <label>Mileage allowance</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>