QA Project/Force/force-app/main/default/objects/Invoice_Line_Item__c/fields/Miles_Driven__c.field-meta.xml
<CustomField>
    <fullName>Miles_Driven__c</fullName>
    <label>Miles Driven</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>