QA Project/Force/force-app/main/default/objects/Invoice_Line_Item__c/recordTypes/services.recordType-meta.xml
<RecordType>
    <fullName>services</fullName>
    <active>true</active>
    <label>services</label>
</RecordType>